rust/surreal-query-builder/src/snapshots/surrealdb_macros__query_transaction__tests__if_statement6.snap
---
source: surreal-macros/src/query_transaction.rs
expression: transaction.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "user",
                id: String(
                    "oyelowo",
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "user:oyelowo",
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Prince Edward Island",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Prince Edward Island'",
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "city IS $_param_00000000",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "`city IS $_param_00000000`",
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "city ~ $_param_00000000",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "`city ~ $_param_00000000`",
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "user",
                id: String(
                    "oyedayo",
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "user:oyedayo",
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "INDONESIA",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'INDONESIA'",
    },
]
